[Minor] OperationsLog start is now async